--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
 
         <ul id="gift-list">
             <li>
-                <img src="https://via.placeholder.com/50" alt="Perfume Favorito">
+                <img src="https://production.na01.natura.com/on/demandware.static/-/Sites-natura-br-storefront-catalog/default/dw44b766d1/NATBRA-71770_1.jpg" alt="Perfume Favorito">
                 <span>Perfume Favorito</span>
-                <a href="https://google.com" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <a href="https://www.natura.com.br/p/desodorante-perfume-natura-homem-dom-100-ml/NATBRA-71770?utm_term=NATBRA-71770&gad_source=4&gclid=Cj0KCQjwrp-3BhDgARIsAEWJ6SybCx9lY9gbVHfRbftaKHG-NBdheaOMmyS4B43ro2C-sK5i-cTBhfgaAgpVEALw_wcB&gclsrc=aw.ds" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
             <li>
-                <img src="https://via.placeholder.com/50" alt="Relógio Inteligente">
+                <img src="https://down-br.img.susercontent.com/file/ba365445974d6b90007ce76ff8b4da4e@resize_w450_nl.webp" alt="Relógio Inteligente">
                 <span>Relógio Inteligente</span>
-                <a href="https://google.com" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <a href="https://shopee.com.br/product/779497783/18837586165?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMVNqZ0YyYStUTnA3Y0xEOWlWcC9wMm5KaGNiZmZnZnZ1VnhyUzVnOVJRRmdPaUhqdmN5QStUcmNjTW1qdjI2NWZQWWRpN2ZObzR4bzBvU0k4SXluY3k5RE9BcTMxWkx6eE1ObXF4OG9Pc0JBPT0&srsltid=AfmBOooKDjOzDKE5xcGh_HFgGQouEr4jiNJS7J6GEtOIG7Qchm7xe7GxSGg" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
             <li>
-                <img src="https://via.placeholder.com/50" alt="Café da manhã na cama">
-                <span>Café da manhã na cama</span>
-                <a href="https://google.com" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <img src="https://m.media-amazon.com/images/I/61WOtNEGeNL._AC_SX679_.jpg" alt="Kit para barba">
+                <span>Kit para barba</span>
+                <a href="https://www.amazon.com.br/Barbeador-aparador-raspador-OneBlade-Philips/dp/B0C4ZXFSR8/ref=asc_df_B0C4ZXFSR8/?tag=googleshopp00-20&linkCode=df0&hvadid=709857204948&hvpos=&hvnetw=g&hvrand=1243178029533983264&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9074205&hvtargid=pla-2254634761807&psc=1&mcid=0c67ebd79aa23a0abd7123fe172a7d8f&gad_source=4" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
             <li>
-                <img src="https://via.placeholder.com/50" alt="Tênis baratinho e estiloso">
+                <img src="https://images.tcdn.com.br/img/img_prod/974905/tenis_mad_rats_old_school_roxo_587_1_2eb78ef0031cf01236c02be581d96b96.jpg" alt="Tênis baratinho e estiloso">
                 <span>Tênis baratinho e estiloso</span>
-                <a href="https://google.com" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <a href="https://www.correderua.com.br/mad-rats-old-school-roxo-fat-lace" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
             <li>
-                <img src="https://via.placeholder.com/50" alt="Acessórios para corrida">
+                <img src="https://ae-pic-a1.aliexpress-media.com/kf/Sa7b423aa95434080bab2d56fffd0e4d2s.jpg_80x80.jpg_.webp" alt="Acessórios para corrida">
                 <span>Acessórios para corrida</span>
-                <a href="https://google.com" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <a href="https://pt.aliexpress.com/item/1005006319118243.html?src=google&src=google&albch=shopping&acnt=768-202-3196&isdl=y&slnk=&plac=&mtctp=&albbt=Google_7_shopping&aff_platform=google&aff_short_key=UneMJZVf&gclsrc=aw.ds&&albagn=888888&&ds_e_adid=&ds_e_matchtype=&ds_e_device=c&ds_e_network=x&ds_e_product_group_id=&ds_e_product_id=pt1005006319118243&ds_e_product_merchant_id=5084026053&ds_e_product_country=BR&ds_e_product_language=pt&ds_e_product_channel=online&ds_e_product_store_id=&ds_url_v=2&albcp=19639392923&albag=&isSmbAutoCall=false&needSmbHouyi=false&gad_source=1&gclid=Cj0KCQjwrp-3BhDgARIsAEWJ6Sxy7HvioAS_vRF_TdURHSUlKaUdomqzl8jmll8BI9n8W_kQu4-bntcaAsMAEALw_wcB" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
         </ul>
