--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
             </li>
             <li>
+                <img src="https://https://http2.mlstatic.com/D_NQ_NP_2X_805258-MLU77756045442_072024-F.webp" alt="Perfume Favorito">
+                <span>SmartWatch Plano B</span>
+                <a href="https://https://www.mercadolivre.com.br/relogio-smartwatch-qcy-gt-s8-tela-amoled-bluetooth-ipx8-caixa-cinza-pulseira-cinza-bisel-cinza/p/MLB38659084?pdp_filters=item_id%3AMLB3814227853&from=gshop&matt_tool=15674050&matt_word=&matt_source=google&matt_campaign_id=14303413808&matt_ad_group_id=166043407348&matt_match_type=&matt_network=g&matt_device=c&matt_creative=686826984892&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=735128188&matt_product_id=MLB38659084-product&matt_product_partition_id=2270550367918&matt_target_id=pla-2270550367918&cq_src=google_ads&cq_cmp=14303413808&cq_net=g&cq_plt=gp&cq_med=pla&gad_source=1&gclid=CjwKCAiAudG5BhAREiwAWMlSjEaketCa1Wh8RDgI6E6ylRNXixSm-2yNXWJHC9zz8DE5nCVk1ciCrBoCJvUQAvD_BwE" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
+                <button class="favorite-btn" onclick="markAsFavorite(this)">Favoritar</button>
+            </li>
+            <li>
                 <img src="https://down-br.img.susercontent.com/file/ba365445974d6b90007ce76ff8b4da4e@resize_w450_nl.webp" alt="Relógio Inteligente">
                 <span>Relógio Inteligente</span>
                 <a href="https://shopee.com.br/product/779497783/18837586165?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMVNqZ0YyYStUTnA3Y0xEOWlWcC9wMm5KaGNiZmZnZnZ1VnhyUzVnOVJRRmdPaUhqdmN5QStUcmNjTW1qdjI2NWZQWWRpN2ZObzR4bzBvU0k4SXluY3k5RE9BcTMxWkx6eE1ObXF4OG9Pc0JBPT0&srsltid=AfmBOooKDjOzDKE5xcGh_HFgGQouEr4jiNJS7J6GEtOIG7Qchm7xe7GxSGg" class="button" target="_blank" onclick="markAsBought(this)">Comprar</a>
